<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about" />
    <item
        android:id="@+id/list_switch"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/list_switch" />
    <item
        android:id="@+id/order_switch"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/order_switch" />
    <item
        android:id="@+id/families"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/families" />
</menu>