<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:padding="5dip"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/title_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:layout_gravity="center_vertical"
            android:text="@string/toggle_species"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"/>
        <!---->
    </LinearLayout>

    <TextView
        android:id="@+id/toggle_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/toggleDismissButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="1dip"
            android:text="@string/dismiss" />

        <Button
            android:id="@+id/toggle_species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="1dip"
            android:text="@string/list_switch" />

    </LinearLayout>
</LinearLayout>